<resources>
    <string name="app_name">GadgeOthek</string>
    
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_IP">Server (zB: "http://152.96.236.23:8080")</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in">Sign in</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!-- Strings related to RegisterActivity -->
    <string name="title_activity_register">Registrieren</string>

    <string name="prompt_username">Benutzername</string>
    <string name="prompt_mail">E-Mail-Adresse</string>
    <string name="prompt_setPWD">Passwort</string>
    <string name="prompt_repeatPWD">Passwort erneut eingeben</string>
    <string name="prompt_matNr">Matrikelnummer</string>
    <string name="prompt_adress">Adresse</string>

    <string name="label_username">Benutzername</string>
    <string name="label_mail">E-Mail-Adresse</string>
    <string name="label_setPWD">Passwort eingeben</string>
    <string name="label_repeatPWD">Passwort erneut eingeben</string>
    <string name="label_matNr">Matrikelnummer</string>
    <string name="label_adress">Adresse</string>

    <string name="button_register">Registrieren</string>

    <!-- String related to MainActivity -->
    <string name="title_activity_main">MainActivity</string>

    <string name="nav_label_menuSubtitle">Deine GadgOthek</string>
    <string name="nav_label_ausleihe">Ausleihe</string>
    <string name="nav_label_reservierung">Reservierung</string>
    <string name="nav_label_options">Optionen</string>
    <string name="nav_label_logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="loanList_label_noFound">Es wurden keine Ausleihen gefunden.</string>
    <string name="loanList_label_loading">Ausleihen werden geladen.</string>
    <string name="gadgetList_label_noFound">Es wurden keine Gadgets gefunden.</string>
    <string name="gadgetList_label_loading">Gadgets werden geladen.</string>

    <string name="reservierungsList_label_deleteQuestion">Möchten Sie die Reservierung von =gadget= wirklich löschen?</string>
    <string name="bibliothekList_label_addQuestion">Möchten Sie dieses Gadget =gadget= reservieren? (max. 3 Reservierungen)</string>
    <string name="bibliothekList_label_addReservation">Tipp: Langes Drücken zum Hinzufügen.</string>

    <string name="reservierungsList_label_noFound">Es wurden keine Reservierungen gefunden.</string>
    <string name="biblio_label_noFound">Die Bibliothek enthält keine Objekte.</string>
    <string name="biblio_label_allready_3">Sie haben bereits 3 Reservierungen.</string>

    <string name="action_settings">Settings</string>
    <string name="nav_label_bibliothek">Bibliothek</string>
    <string name="reservierungsList_label_deleteHint">Tipp: Langes Drücken zum Löschen.</string>

    <!-- Strings added automatically -->


</resources>
